--- a/app/src/main/res/layout/viewholder_tab.xml
+++ b/app/src/main/res/layout/viewholder_tab.xml
@@ -9,10 +9,10 @@
     android:layout_marginRight="10dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp">
-    <android.support.v7.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/tab_favicon_image_view"
-        android:layout_width="17dp"
-        android:layout_height="17dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="14dp"
         android:layout_gravity="start|center_vertical"
