--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -14,8 +14,18 @@
         <item name="android:background">@color/tab_switcher_background</item>
     </style>
 
+    <style name="AppTheme.ProgressBar" parent="AppTheme">
+        <item name="colorAccent">@color/omnibar_progress_bar</item>
+        <item name="android:background">@color/omnibar_progress_bar_background</item>
+    </style>
+
     <style name="AppBar" parent="@style/ThemeOverlay.AppCompat.ActionBar">
     </style>
+
+    <style name="AppBar.Toolbar" parent="AppBar">
+        <item name="android:actionOverflowButtonStyle">@style/OverflowButton</item>
+    </style>
+
     <style name="AppBar.Popup" parent="@style/ThemeOverlay.AppCompat.Light">
     </style>
 
@@ -23,7 +33,7 @@
         <item name="colorPrimary">@color/tab_switcher_background</item>
     </style>
 
-    <style name="AppTheme.ProgressBar" parent="AppTheme">
-        <item name="colorAccent">@color/omnibar_progress_bar</item>
+    <style name="OverflowButton" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:tint">#ffffff</item>
     </style>
 </resources>
