--- a/app/src/main/res/layout/view_omnibar.xml
+++ b/app/src/main/res/layout/view_omnibar.xml
@@ -16,12 +16,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            app:contentInsetStart="20dp"
+            app:contentInsetStartWithNavigation="20dp"
+            app:contentInsetLeft="20dp"
+            android:theme="@style/AppBar.Toolbar"
+            app:popupTheme="@style/AppBar.Popup"><!--
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:theme="@style/AppBar.Toolbar"
-            app:popupTheme="@style/AppBar.Popup">
+            app:contentInsetEnd="0dp"
+            app:contentInsetEndWithActions="0dp"
+            app:contentInsetRight="0dp"-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -32,8 +40,10 @@
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginRight="12dp"
                     android:src="@drawable/ic_prev_arrow"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/content_description_omnibar_back_button"/>
