--- a/app/src/main/res/menu/browser.xml
+++ b/app/src/main/res/menu/browser.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <group android:id="@+id/group_menu">
         <item
             android:id="@+id/action_refresh"
@@ -24,13 +24,20 @@
             android:orderInCategory="400"
             android:title="@string/browser_menu_copy_url"
             app:showAsAction="never"/>
+        <item
+            android:id="@+id/action_use_external_browser"
+            android:checkable="true"
+            android:checked="false"
+            android:orderInCategory="500"
+            android:title="@string/use_external_browser"
+            app:showAsAction="never" />
     </group>
     <item
         android:id="@+id/action_delete_all_text"
-        android:orderInCategory="600"
-        android:visible="false"
-        android:title="@string/browser_menu_delete_text"
         android:icon="@drawable/ic_clear"
+        android:orderInCategory="600"
+        android:title="@string/browser_menu_delete_text"
+        android:visible="false"
         app:showAsAction="always"
         tools:ignore="AlwaysShowAction" />
 </menu>
