Feature/webview improvements (#51)
* Add null-handling for request headers

* Switch to `@AnyThread` annotation, as it doesn't matter who calls this

* Add missing import statement

* Replace use of `NestedScrollView` with nested webview

* Add configChanges to stop browser activity restarting on config changes

This is only needed because otherwise the WebView will reload which is a pretty jarring UI.

* Stop showing the horrid web view zoom controls

* Add missing import

* Remove swipe to refresh layout

Swipe to refresh is desired functionality, but it isn't happening quite "for free" with the nested web view. Will revisit this functionality at a later date.

* Adding extensions to convert between `dp` and `px`

* Code style improvements; rename variable to drop hungarian notation

* Update comment to reflect @AnyThread usage

--- a/app/src/main/res/layout/content_browser.xml
+++ b/app/src/main/res/layout/content_browser.xml
@@ -15,32 +15,14 @@
   ~ limitations under the License.
   -->
 
-<android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/swipeToRefreshContainer"
+<com.duckduckgo.app.browser.NestedWebView
+    android:id="@+id/webView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    app:layout_constraintBottom_toBottomOf="@id/urlInput"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/urlInput"
-    tools:context="com.duckduckgo.app.browser.BrowserActivity">
+    />
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <WebView
-            android:id="@+id/webView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            />
-
-    </android.support.v4.widget.NestedScrollView>
-
-</android.support.v4.widget.SwipeRefreshLayout>
