Add home screen and home-search screen
Added shared element transition for the url textview/edit text. doesn't yet actually tie into searching.

--- a/app/src/main/res/menu/menu_burn.xml
+++ b/app/src/main/res/menu/menu_burn.xml
@@ -19,12 +19,8 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_item_burn"
-        android:title="@string/back"/>
-    <item
-        android:id="@+id/forward_menu_item"
-        android:title="@string/forward"/>
-    <item
-        android:id="@+id/refresh_menu_item"
-        app:showAsAction="never"
-        android:title="@string/refresh"/>
+        android:title="@string/burn"
+        android:icon="@drawable/fire"
+        app:showAsAction="always"
+        />
 </menu>
