--- a/app/src/main/res/layout/content_home_search.xml
+++ b/app/src/main/res/layout/content_home_search.xml
@@ -15,16 +15,15 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/menu_item_burn"
-        android:title="@string/back"/>
-    <item
-        android:id="@+id/forward_menu_item"
-        android:title="@string/forward"/>
-    <item
-        android:id="@+id/refresh_menu_item"
-        app:showAsAction="never"
-        android:title="@string/refresh"/>
-</menu>
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#2f3135"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.duckduckgo.app.home.HomeSearchActivity"
+    tools:showIn="@layout/activity_home_search">
+
+</android.support.constraint.ConstraintLayout>
