--- a/app/src/main/res/values/strings-transitions.xml
+++ b/app/src/main/res/values/strings-transitions.xml
@@ -15,16 +15,6 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/menu_item_burn"
-        android:title="@string/back"/>
-    <item
-        android:id="@+id/forward_menu_item"
-        android:title="@string/forward"/>
-    <item
-        android:id="@+id/refresh_menu_item"
-        app:showAsAction="never"
-        android:title="@string/refresh"/>
-</menu>
+<resources>
+    <string name="transition_url_input">url input</string>
+</resources>
