--- a/app/src/main/res/layout/content_browser.xml
+++ b/app/src/main/res/layout/content_browser.xml
@@ -19,10 +19,12 @@
     android:id="@+id/webView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
+    android:visibility="gone"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    />
+    tools:visibility="visible"/>
 
