Navigate back to landing page if user clicks outside of toolbar

--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -21,6 +21,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rootView"
     tools:context="com.duckduckgo.app.browser.BrowserActivity">
 
     <android.support.design.widget.AppBarLayout
