Feature/add home screen (#57)
* Add home screen and home-search screen

Added shared element transition for the url textview/edit text. doesn't yet actually tie into searching.

* Replace HomeSearchActivity with BrowserActivity

* Preserve search query as the url input until the first result loaded

* Refactor method out for better clarity on code purpose

* Remove placeholder FAB and commented out code

* Further tidy up

* Rename `activity starter` method to simply `intent()`

* Remove misplaced action bar configuration

* Make ViewModel own the decision of what to show in the URL bar

* Move useful EditText extensions to their own file

* Navigate back to landing page if user clicks outside of toolbar

* Only show clear button when there is input to clear

* Updating to latest stable gradle plugin

* Clear button only shown when it should; no padding when it's gone

* Add documentation to new extension method

--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -21,6 +21,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rootView"
     tools:context="com.duckduckgo.app.browser.BrowserActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -58,6 +59,7 @@
                         android:background="@color/omnibarBackground"
                         android:elevation="4dp"
                         android:fontFamily="sans-serif-medium"
+                        android:transitionName="@string/transition_url_input"
                         android:hint="@string/omnibarInputHint"
                         android:imeOptions="flagNoExtractUi|actionDone"
                         android:inputType="textUri|textShortMessage|textNoSuggestions"
